--- a/.github/ISSUE_TEMPLATE/기능-추가-템플릿-.md
+++ b/.github/ISSUE_TEMPLATE/기능-추가-템플릿-.md
@@ -1,8 +1,8 @@
 ---
 name: '기능 추가 템플릿 '
-about: '기능을 추가할 때 사용하는 템플릿 '
+about: '기능,문서, 배포용 파일을 추가할 때 사용하는 템플릿 '
 title: ''
-labels: Feature
+labels: Deployment, Documentation, Feature
 assignees: ''
 
 ---
